--- a/templates/eve_holder/event_form.html
+++ b/templates/eve_holder/event_form.html
@@ -16,6 +16,9 @@
                     {{ form.event_description.label }}
                     {{ form.event_description }}
                     <br>
+                    {{ form.event_date.label }}
+                    {{ form.event_date }}
+                    <br>
                     {{ form.pub_date.label }}
                     {{ form.pub_date }}
                     <br>
