--- a/templates/eve_holder/dashboard.html
+++ b/templates/eve_holder/dashboard.html
@@ -9,7 +9,7 @@
     <div class="row">
 
         <div class="col-md-10">
-            <h5>LAST 5 EVENTS</h5>
+            <h5>ALL EVENTS</h5>
             <hr>
             <div class="card card-body">
                 <table class="table table-sm" id="recent-event-table">
