--- a/templates/eve_holder/event_detail.html
+++ b/templates/eve_holder/event_detail.html
@@ -63,6 +63,16 @@
                                             </div>
                                             <hr/>
 
+                                            <div class="row">
+                                                <div class="col-sm-3 col-md-2 col-5">
+                                                    <label style="font-weight:bold;">Event Date</label>
+                                                </div>
+                                                <div class="col-md-8 col-6">
+                                                    {{ event.event_date}}
+                                                </div>
+                                            </div>
+                                            <hr/>
+
 
                                             <div class="row">
                                                 <div class="col-sm-3 col-md-2 col-5">
@@ -75,7 +85,7 @@
                                             <hr/>
                                             <div class="row">
                                                 <div class="col-sm-3 col-md-2 col-5">
-                                                    <label style="font-weight:bold;">Expired</label>
+                                                    <label style="font-weight:bold;">Last day of registration</label>
                                                 </div>
                                                 <div class="col-md-8 col-6">
                                                     {{ event.end_date }}
@@ -111,12 +121,14 @@
                                             </div>
                                             <hr/>
                                             {% if event.visitor_set.all.count < event.amount_accepted or event.amount_accepted is None %}
+                                                {% if visitor not in event.visitor_set.all %}
                                                 <div class="row">
                                                     <div class="col-sm-3 col-md-2 col-5">
                                                         <a class="btn btn-sm btn-info"
                                                            href="{% url 'eve_holder:event_register' event.id %}">Join
                                                             Now</a>
                                                     </div>
+                                                    {% endif %}
                                                     {% endif %}
                                                     <div>
                                                         <a class="btn btn-sm btn-secondary"
