--- a/templates/eve_holder/host.html
+++ b/templates/eve_holder/host.html
@@ -44,23 +44,23 @@
                     <tr>
                         <th>Event</th>
                         <th>Description</th>
-                        <th>Status</th>
+                        <th>Event Date</th>
                         <th>Edit</th>
                         <th>Visitors</th>
-                        <th>Remove</th>
+                        <th>Delete ?</th>
                     </tr>
 
                     {% for event in events %}
                         <tr>
                             <td>{{ event.event_name }}</td>
                             <td>{{ event.event_description }}</td>
-                            <td>{{ event.can_register }}</td>
-                            <td><a class="btn btn-sm btn-info"
+                            <td>{{ event.event_date }}</td>
+                            <td><a class="btn btn-sm btn-warning"
                                    href="{% url 'eve_holder:edit_event' event.id %}">Edit</a></td>
                             <td><a class="btn btn-sm btn-info"
                                    href="{% url 'eve_holder:visitors_list' event.id %}">View</a></td>
                             <td><a class="btn btn-sm btn-danger"
-                                   href="{% url 'eve_holder:delete_event' event.id %}">Remove</a>
+                                   href="{% url 'eve_holder:delete_event' event.id %}">Delete</a>
                             </td>
                         </tr>
                     {% endfor %}
