--- a/templates/eve_holder/visitor.html
+++ b/templates/eve_holder/visitor.html
@@ -44,18 +44,17 @@
                     <tr>
                         <th>Event</th>
                         <th>Description</th>
-                        <th>Status</th>
-                        <th>Remove</th>
+                        <th>Event Date</th>
+                        <th>View</th>
                     </tr>
 
                     {% for event in events %}
                         <tr>
                             <td>{{ event.event_name }}</td>
                             <td>{{ event.event_description }}</td>
-                            <td>{{ event.can_register }}</td>
-                            <td><a class="btn btn-sm btn-danger"
-                                   href="{% url 'eve_holder:event_cancel' event.id %}">Remove</a>
-                            </td>
+                            <td>{{ event.event_date }}</td>
+                            <td><a class="btn btn-sm btn-primary"
+                                href="{% url 'eve_holder:event_detail' event.id %}">View</a></td>
                         </tr>
                     {% endfor %}
 
