--- a/static/css/accounts.css
+++ b/static/css/accounts.css
@@ -3,14 +3,14 @@ html {
     margin: 0;
     padding: 0;
     height: 100%;
-    background: #7abecc !important;
+    background: #6172be !important;
 }
 
 .user_card {
     width: 350px;
     margin-top: auto;
     margin-bottom: auto;
-    background: #74cfbf;
+    background: #809ed7;
     position: relative;
     display: flex;
     justify-content: center;
@@ -20,7 +20,6 @@ html {
     -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     border-radius: 5px;
-
 }
 
 .form_container {
@@ -34,7 +33,7 @@ html {
 
 .login_btn {
     width: 100%;
-    background: #33ccff !important;
+    background: #6172be !important;
     color: white !important;
 }
 
@@ -48,7 +47,7 @@ html {
 }
 
 .input-group-text {
-    background: #f7ba5b !important;
+    background: #efbbc6 !important;
     color: white !important;
     border: 0 !important;
     border-radius: 0.25rem 0 0 0.25rem !important;
