--- a/static/css/main.css
+++ b/static/css/main.css
@@ -8,15 +8,15 @@ body {
 }
 
 #total-events {
-    background-color: #4cb4c7;
+    background-color: #6172be;
 }
 
 #events-registered {
-    background-color: #7abecc;
+    background-color: #517ccf;
 }
 
 #history-events {
-    background-color: #7cd1c0;
+    background-color: #809ed7;
 }
 
 #recent-event-table {
