--- a/templates/eve_holder/events.html
+++ b/templates/eve_holder/events.html
@@ -15,6 +15,7 @@
                         <th>Events</th>
                         <th>Description</th>
                         <th>Last day of registration</th>
+                        <td>Location</td>
                         <th>Event Date</th>
                         <th>Views</th>
                     </tr>
@@ -23,6 +24,7 @@
                         <tr>
                             <td>{{ event.event_name }}</td>
                             <td>{{ event.event_description }}</td>
+                            <td>{{ event.event_location }}</td>
                             <td>{{ event.end_date }}</td>
                             <td>{{ event.event_date }}</td>
                             <td><a class="btn btn-sm btn-primary"
