--- a/templates/eve_holder/event_form.html
+++ b/templates/eve_holder/event_form.html
@@ -1,35 +1,83 @@
 {% extends 'eve_holder/main.html' %}
 {% load static %}
+
 {% block content %}
 
     <br>
     <div class="row">
         <div class="col-md-12">
-            <div class="card card-body">
-
+            <div class="card card-body" style="width: fit-content; margin-right: auto; margin-left: auto; margin-top: auto; margin-bottom: auto">
+                <span><h5> Create Event: </h5></span>
+                <hr>
                 <form action="" method="post">
                     {% csrf_token %}
-                    {{ form.event_name.label }}
-                    {{ form.event_name }}
-                    <br>
-                    {{ form.event_host }}
-                    {{ form.event_description.label }}
-                    {{ form.event_description }}
-                    <br>
-                    {{ form.event_date.label }}
-                    {{ form.event_date }}
-                    <br>
-                    {{ form.pub_date.label }}
-                    {{ form.pub_date }}
-                    <br>
-                    {{ form.end_date.label }}
-                    {{ form.end_date }}
-
-                    <br>
-                    {{ form.amount_accepted.label }} (minimum is 1)
-                    {{ form.amount_accepted }}
-
-
+                    <div class="col-md-12">
+                            <div class="row">
+                                <div class="col-sm-4 col-md-4 col-2">
+                                    <label style="font-weight:bold;">Event ame: </label>
+                                </div>
+                                <div class="col-md-8 col-6">
+                                    {{ form.event_name }}
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-sm-4 col-md-4 col-2">
+                                    <label style="font-weight:bold;">Host: </label>
+                                </div>
+                                <div class="col-md-8 col-6">
+                                    {{ form.event_host }}
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-sm-4 col-md-4 col-2">
+                                    <label style="font-weight:bold;">Event Description: </label>
+                                </div>
+                                <div class="col-md-8 col-6">
+                                    {{ form.event_description }}
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-sm-4 col-md-4 col-2">
+                                    <label style="font-weight:bold;">Event Date: </label>
+                                </div>
+                                <div class="col-md-8 col-6">
+                                    {{ form.event_date }}
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-sm-4 col-md-4 col-2">
+                                    <label style="font-weight:bold;">Publish Date: </label>
+                                </div>
+                                <div class="col-md-8 col-6">
+                                    {{ form.pub_date }}
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-sm-4 col-md-4 col-2">
+                                    <label style="font-weight:bold;">End Date: </label>
+                                </div>
+                                <div class="col-md-8 col-6">
+                                    {{ form.end_date }}
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-sm-4 col-md-4 col-2">
+                                    <label style="font-weight:bold;">Event Location: </label>
+                                </div>
+                                <div class="col-md-8 col-6">
+                                    {{ form.event_location }}
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-sm-4 col-md-4 col-2">
+                                    <label style="font-weight:bold;">Amount Accepted (minimum is 1): </label>
+                                </div>
+                                <div class="col-md-8 col-6">
+                                    {{ form.amount_accepted }}
+                                </div>
+                            </div>
+                    </div>
+                    <hr>
                     <input class="btn btn-info" type="submit" name="Submit">
                 </form>
 
