--- a/templates/eve_holder/host.html
+++ b/templates/eve_holder/host.html
@@ -6,7 +6,7 @@
 
     <div class="row">
         <div class="col-md">
-            <div class="card card-body">
+            <div class="card card-body" style="min-height: 275px">
                 <h5>Host: {{ host.name }}</h5>
                 <hr>
                 <a class="btn btn-outline-info  btn-sm btn-block" href="{% url 'eve_holder:host_update_information' %}">Update Account</a>
@@ -16,7 +16,7 @@
         </div>
 
         <div class="col-md">
-            <div class="card card-body">
+            <div class="card card-body" style="min-height: 275px">
                 <h5>Contact Information</h5>
                 <hr>
                 <p>First name: {{ user.first_name }} </p>
@@ -27,7 +27,7 @@
         </div>
 
         <div class="col-md">
-            <div class="card card-body">
+            <div class="card card-body" style="min-height: 275px">
                 <h5>Total Events</h5>
                 <hr>
                 <h1 style="text-align: center;padding: 10px">{{ events_count }}</h1>
