--- a/templates/eve_holder/visitor.html
+++ b/templates/eve_holder/visitor.html
@@ -6,17 +6,16 @@
 
     <div class="row">
         <div class="col-md">
-            <div class="card card-body">
+            <div class="card card-body" style="min-height: 275px">
                 <h5>Visitor: {{ visitors.user }}</h5>
                 <hr>
                 <a class="btn btn-outline-info  btn-sm btn-block" href="{% url 'eve_holder:visitor_update_information' %}">Update Account</a>
                 <a class="btn btn-outline-danger  btn-sm btn-block" href="{% url 'eve_holder:delete_account' %}">Delete Account</a>
-
             </div>
         </div>
 
         <div class="col-md">
-            <div class="card card-body">
+            <div class="card card-body" style="min-height: 275px">
                 <h5>Contact Information</h5>
                 <hr>
                 <p>Firstname: {{ user.first_name }}</p>
@@ -27,7 +26,7 @@
         </div>
 
         <div class="col-md">
-            <div class="card card-body">
+            <div class="card card-body" style="min-height: 275px">
                 <h5>Total Events</h5>
                 <hr>
                 <h1 style="text-align: center;padding: 10px">{{ events_count }}</h1>
