--- a/templates/eve_holder/host.html
+++ b/templates/eve_holder/host.html
@@ -39,7 +39,7 @@
     <div class="row">
         <div class="col-md">
             <div class="card card-body">
-                <h5>Participated Events</h5>
+                <h5>Your Events</h5>
                 <table class="table table-sm">
                     <tr>
                         <th>Event</th>
