--- a/templates/eve_holder/event_detail.html
+++ b/templates/eve_holder/event_detail.html
@@ -133,8 +133,7 @@
                                                 <div class="row">
                                                     <div class="col-sm-3 col-md-2 col-5">
                                                         <a class="btn btn-sm btn-info"
-                                                           href="{% url 'eve_holder:event_register' event.id %}">Join
-                                                            Now</a>
+                                                           href="{% url 'eve_holder:event_register' event.id %}">Join Now</a>
                                                     </div>
                                                     {% endif %}
                                                     {% endif %}
