--- a/templates/eve_holder/event_form.html
+++ b/templates/eve_holder/event_form.html
@@ -14,7 +14,7 @@
                     <div class="col-md-12">
                             <div class="row">
                                 <div class="col-sm-4 col-md-4 col-2">
-                                    <label style="font-weight:bold;">Event ame: </label>
+                                    <label style="font-weight:bold;">Event Name: </label>
                                 </div>
                                 <div class="col-md-8 col-6">
                                     {{ form.event_name }}
