--- a/static/css/homepage.css
+++ b/static/css/homepage.css
@@ -1,10 +1,19 @@
 /* for nav bar */
 @import url('https://fonts.googleapis.com/css2?family=Kalam&display=swap');
-/*for start now */
-@import url('https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap');
+/* for content headline */
+@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Nanum+Pen+Script&display=swap');
 
 body{
     background-color: #142850;
+}
+
+#navbar-content{
+    display: flex;
+}
+
+#navbar-content-right{
+    display: flex;
+    justify-content: flex-end;
 }
 
 #navbar-brand{
@@ -24,6 +33,7 @@ body{
     transition: 1s;
     /*transition-timing-function: linear;*/
     background-color: #ffc93c;
+    border-radius: 10px;
 }
 
 #navbar-signup{
@@ -38,41 +48,78 @@ body{
     transition: 1s;
     /*transition-timing-function: linear;*/
     background-color: #ffc93c;
+    border-radius: 10px;
 }
 
 /*content*/
-
-#host-headline{
-    color: #ffc93c;
+img {
+    max-width: 100%;
+    max-height: 100%;
+    display: block;
+    object-fit: cover;
+    filter: brightness(70%);
 }
 
-#above{
-    width: 100%;
-    height: 50%;
-    position: fixed;
+#content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
 }
 
-#below{
-    bottom: 0;
-    width: 100%;
-    height: 50%;
-    position:absolute;
-    background-color: #ffc93c;
-    /*background-color: #ecd42e;*/
-
+/* block 1 */
+#block1-text{
+    font-size: 100px;
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    position: absolute;
+    color: white;
+    z-index: 1;
 }
 
-#start-now{
-    background-color: #00a8cc;
-    font-family: 'Nanum Pen Script', cursive;
-    border-color: transparent;
+#block1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.center{
-    
+/* block 2 */
+#block2-text{
+    font-size: 100px;
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    position: absolute;
+    color: white;
+    z-index: 1;
+    font-family: 'Kaushan Script', cursive;
+
+    /*position: sticky;*/
+    /*bottom: 100px;*/
 }
-/*.content{*/
-/*    display: grid;*/
-/*    grid-template-rows: 1fr 1fr;*/
-/*    margin: 0;*/
-/*}*/
+
+#block2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /*background: url("/static/images/pic.jpg");*/
+}
+
+/* block 3 */
+#block3-text{
+    font-size: 100px;
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    position: absolute;
+    color: white;
+    z-index: 1;
+    font-family: 'Kaushan Script', cursive;
+}
+
+#block3{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
