--- a/templates/eve_holder/homepage.html
+++ b/templates/eve_holder/homepage.html
@@ -24,23 +24,39 @@
 <div id="content">
     <div id="block1">
         <div id="block1-text">
-            HELLOWORLD
+            <div id="block1-welcome">
+                welcome
+            </div>
+            <div id="block1-to">
+                to
+            </div>
+            <div id="block1-brand">
+                EVEHOLDER
+            </div>
         </div>
         <img src="{% static 'eve_holder/../../static/images/block1.jpg' %}">
     </div>
     <div id="block2">
-        <div id="block2-text" data-aos="fade-up" data-aos-duration="1100">
-            HOST
+        <div id="block2-text">
+            <div id="block2-headline" data-aos="fade-up" data-aos-duration="1100">
+                HOST
+            </div>
+            <div id="block2-description" data-aos="fade-up" data-aos-duration="1300">
+                Start being a host in a blink by filling your event's information.
+                <br> Your event is now ready to go
+            </div>
         </div>
-<!--        <div id="block2-description" data-aos="fade-up" data-aos-duration="1100">-->
-<!--            eiei-->
-<!--        </div>-->
-
         <img src="{% static 'eve_holder/../../static/images/block2.jpg' %}">
     </div>
     <div id="block3">
-        <div id="block3-text" data-aos="fade-up" data-aos-duration="1100">
-            VISITOR
+        <div id="block3-text">
+            <div id="block3-headline" data-aos="fade-up" data-aos-duration="1100">
+                VISITOR
+            </div>
+            <div id="block3-description" data-aos="fade-up" data-aos-duration="1300">
+                “Somewhere, something incredible is waiting to be known.” – Sharon Begley <br>
+                Are you ready to discover a new thing?
+            </div>
         </div>
         <img src="{% static 'eve_holder/../../static/images/lastblock.jpg' %}">
     </div>
