--- a/static/css/homepage.css
+++ b/static/css/homepage.css
@@ -2,6 +2,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Kalam&display=swap');
 /* for content headline */
 @import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Nanum+Pen+Script&display=swap');
+/* for content description */
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@400;700&display=swap');
+/* for welcome */
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cormorant&family=Dancing+Script:wght@500&family=Zilla+Slab&display=swap');
+
+/* for content brand */
 
 body{
     background-color: #142850;
@@ -18,7 +25,7 @@ body{
 
 #navbar-brand{
     font-family: 'Kalam', cursive;
-    color: #ffc93c;
+    color: #035aa6;
 }
 
 #navbar-login{
@@ -57,7 +64,7 @@ img {
     max-height: 100%;
     display: block;
     object-fit: cover;
-    filter: brightness(70%);
+    filter: brightness(40%);
 }
 
 #content{
@@ -68,15 +75,6 @@ img {
 }
 
 /* block 1 */
-#block1-text{
-    font-size: 100px;
-    display: flex;
-    justify-items: center;
-    align-items: center;
-    position: absolute;
-    color: white;
-    z-index: 1;
-}
 
 #block1{
     display: flex;
@@ -84,42 +82,95 @@ img {
     align-items: center;
 }
 
-/* block 2 */
-#block2-text{
-    font-size: 100px;
-    display: flex;
+#block1-text{
+    /*display: flex;*/
     justify-items: center;
     align-items: center;
-    position: absolute;
-    color: white;
     z-index: 1;
-    font-family: 'Kaushan Script', cursive;
-
-    /*position: sticky;*/
-    /*bottom: 100px;*/
+    position: absolute;
 }
 
+#block1-welcome{
+    font-size: 120px;
+    color: white;
+    text-align: center;
+    font-family: 'Dancing Script', cursive;
+}
+
+#block1-to{
+    font-size: 50px;
+    color: white;
+    text-align: center;
+    font-family: 'Zilla Slab', serif;
+}
+
+#block1-brand{
+    font-size: 90px;
+    color: #ffc93c;
+    text-align: center;
+    /*position: absolute;*/
+    font-family: 'Zilla Slab', serif;
+}
+
+/* block 2 */
 #block2{
     display: flex;
     justify-content: center;
     align-items: center;
-    /*background: url("/static/images/pic.jpg");*/
 }
 
-/* block 3 */
-#block3-text{
-    font-size: 100px;
+#block2-text{
     display: flex;
     justify-items: center;
     align-items: center;
     position: absolute;
-    color: white;
+    flex-direction: column;
+
+}
+#block2-headline{
+    font-size: 100px;
+    display: flex;
+    color: #12cad6;
     z-index: 1;
     font-family: 'Kaushan Script', cursive;
 }
+#block2-description{
+    font-size: 20px;
+    display: flex;
+    color: white;
+    z-index: 1;
+    text-align: center;
+    font-family: 'Nanum Myeongjo', serif;
+}
 
+/* block 3 */
 #block3{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+#block3-text{
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    position: absolute;
+    flex-direction: column;
+}
+
+#block3-headline{
+    font-size: 100px;
+    display: flex;
+    color: #efb1ff;
+    z-index: 1;
+    font-family: 'Kaushan Script', cursive;
+}
+
+#block3-description{
+    font-size: 20px;
+    display: flex;
+    color: white;
+    z-index: 1;
+    text-align: center;
+    font-family: 'Nanum Myeongjo', serif;
 }
