--- a/templates/eve_holder/homepage.html
+++ b/templates/eve_holder/homepage.html
@@ -36,6 +36,17 @@
         </div>
         <img src="{% static 'eve_holder/../../static/images/block1.jpg' %}">
     </div>
+    <div id="brand-information">
+        <div id="brand-information-text">
+            <div id="brand-information-headline" data-aos="fade-up" data-aos-duration="1100">
+                EVEHOLDER
+            </div>
+            <div id="brand-information-description" data-aos="fade-up" data-aos-duration="1300">
+                A web application for creating and joining events.
+            </div>
+        </div>
+        <img src="{% static 'eve_holder/../../static/images/brandinfo.jpg' %}">
+    </div>
     <div id="block2">
         <div id="block2-text">
             <div id="block2-headline" data-aos="fade-up" data-aos-duration="1100">
@@ -43,7 +54,7 @@
             </div>
             <div id="block2-description" data-aos="fade-up" data-aos-duration="1300">
                 Start being a host in a blink by filling your event's information.
-                <br> Your event is now ready to go
+                <br> Your event is now ready to go.
             </div>
         </div>
         <img src="{% static 'eve_holder/../../static/images/block2.jpg' %}">
