--- a/templates/eve_holder/homepage.html
+++ b/templates/eve_holder/homepage.html
@@ -19,6 +19,17 @@
             <a id="navbar-login" href="{% url 'eve_holder:login' %}">LOGIN</a>
             <a id="navbar-signup" href="{% url 'eve_holder:register' %}">SIGNUP</a>
         </div>
+        {% else %}
+            {% if user.group.all == "Visitors" %}
+                <div id="navbar-content-right-visitor">
+                    <a id="navbar-visitor" href="{% url 'eve_holder:visitor' %}">let's go!</a>
+                </div>
+            {% else %}
+                <div id="navbar-content-right-host">
+                    <a id="navbar-host" href="{% url 'eve_holder:host' %}">let's go!</a>
+                </div>
+            {% endif %}
+
         {% endif %}
 </nav>
 <div id="content">
