--- a/templates/eve_holder/main.html
+++ b/templates/eve_holder/main.html
@@ -10,6 +10,8 @@
 
     <link rel="stylesheet" type="text/css" href="{% static '/css/main.css' %}">
 
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
 </head>
 <body>
 {% include 'eve_holder/navbar.html' %}
