--- a/templates/eve_holder/host_update_information.html
+++ b/templates/eve_holder/host_update_information.html
@@ -4,7 +4,7 @@
     <br>
     <div class="row">
         <div class="col-md-12">
-            <div class="card card-body" style="width: fit-content; margin-right: auto; margin-left: auto; margin-top: 40px; margin-bottom: auto">
+            <div class="card card-body" style="width: fit-content; margin: 40px auto auto;">
                 <span><h5> Update Account Information: </h5></span>
                 <hr>
                 <form action="" method="post">
