--- a/templates/eve_holder/event_detail.html
+++ b/templates/eve_holder/event_detail.html
@@ -16,8 +16,8 @@
                                 <div class="userData ml-3">
                                     <h2 class="d-block"
                                         style="font-size: 1.5rem; font-weight: bold">{{ event.event_name }}</h2>
-<!--                                    <h6 class="d-block">Host by: <a href="javascript:void(0)">{{ host_name }}</a>-->
-<!--                                    </h6>-->
+                                    <!--                                    <h6 class="d-block">Host by: <a href="javascript:void(0)">{{ host_name }}</a>-->
+                                    <!--                                    </h6>-->
                                     <h6 class="d-block">Host by: {{ host_name }}
                                     </h6>
                                 </div>
@@ -67,7 +67,7 @@
                                                     <label style="font-weight:bold;">Event Date</label>
                                                 </div>
                                                 <div class="col-md-8 col-6">
-                                                    {{ event.event_date}}
+                                                    {{ event.event_date }}
                                                 </div>
                                             </div>
                                             <hr/>
@@ -105,8 +105,8 @@
                                                     <label style="font-weight:bold;">Number of visitors</label>
                                                 </div>
                                                 <div class="col-md-8 col-6">
-<!--                                                    <a href=" {% url 'eve_holder:visitors_list' event.id %} ">see more-->
-<!--                                                        details</a>-->
+                                                    <!--                                                    <a href=" {% url 'eve_holder:visitors_list' event.id %} ">see more-->
+                                                    <!--                                                        details</a>-->
                                                     {% if event.amount_accepted is not None %}
                                                         {{ event.visitor_set.all.count }} / {{ event.amount_accepted }}
                                                     {% else %}
@@ -130,27 +130,27 @@
                                             <hr/>
                                             {% if event.visitor_set.all.count < event.amount_accepted or event.amount_accepted is None %}
                                                 {% if visitor not in event.visitor_set.all %}
-                                                <div class="row">
+                                                    <div class="row">
                                                     <div class="col-sm-3 col-md-2 col-5">
                                                         <a class="btn btn-sm btn-info"
-                                                           href="{% url 'eve_holder:event_register' event.id %}">Join Now</a>
+                                                           href="{% url 'eve_holder:event_register' event.id %}">Join
+                                                            Now</a>
                                                     </div>
-                                                    {% endif %}
-                                                    {% endif %}
-                                                    <div>
-                                                        <a class="btn btn-sm btn-secondary"
-                                                           href="{% url 'eve_holder:visitor' %}">Back</a>
-                                                    </div>
+                                                {% endif %}
+                                            {% endif %}
+                                            <div>
+                                                <a class="btn btn-sm btn-secondary"
+                                                   href="{% url 'eve_holder:visitor' %}">Back</a>
+                                            </div>
 
-                                                </div>
                                             </div>
                                         </div>
                                     </div>
-
-
                                 </div>
 
+
                             </div>
+
                         </div>
                     </div>
                 </div>
