--- a/templates/eve_holder/homepage.html
+++ b/templates/eve_holder/homepage.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
 <head>
     <meta charset="UTF-8">
     <title>Homepage</title>
@@ -14,23 +14,23 @@
     <span class="navbar-brand mb-0 h1" id="navbar-content">
         <span id="navbar-brand">EVEHOLDER</span>
         </span>
-        {% if not user.is_authenticated %}
+    {% if not user.is_authenticated %}
         <div id="navbar-content-right">
             <a id="navbar-login" href="{% url 'eve_holder:login' %}">LOGIN</a>
             <a id="navbar-signup" href="{% url 'eve_holder:register' %}">SIGNUP</a>
         </div>
+    {% else %}
+        {% if user.group.all == "Visitors" %}
+            <div id="navbar-content-right-visitor">
+                <a id="navbar-visitor" href="{% url 'eve_holder:visitor' %}">let's go!</a>
+            </div>
         {% else %}
-            {% if user.group.all == "Visitors" %}
-                <div id="navbar-content-right-visitor">
-                    <a id="navbar-visitor" href="{% url 'eve_holder:visitor' %}">let's go!</a>
-                </div>
-            {% else %}
-                <div id="navbar-content-right-host">
-                    <a id="navbar-host" href="{% url 'eve_holder:host' %}">let's go!</a>
-                </div>
-            {% endif %}
-
+            <div id="navbar-content-right-host">
+                <a id="navbar-host" href="{% url 'eve_holder:host' %}">let's go!</a>
+            </div>
         {% endif %}
+
+    {% endif %}
 </nav>
 <div id="content">
     <div id="block1">
@@ -45,7 +45,7 @@
                 EVEHOLDER
             </div>
         </div>
-        <img src="{% static 'eve_holder/../../static/images/block1.jpg' %}">
+        <img src="{% static 'eve_holder/../../static/images/block1.jpg' %}" alt="Welcome to EveHolder">
     </div>
     <div id="brand-information">
         <div id="brand-information-text">
@@ -56,7 +56,7 @@
                 A web application for creating and joining events.
             </div>
         </div>
-        <img src="{% static 'eve_holder/../../static/images/brandinfo.jpg' %}">
+        <img src="{% static 'eve_holder/../../static/images/brandinfo.jpg' %}" alt="EveHolder info pic">
     </div>
     <div id="block2">
         <div id="block2-text">
@@ -68,7 +68,7 @@
                 <br> Your event is now ready to go.
             </div>
         </div>
-        <img src="{% static 'eve_holder/../../static/images/block2.jpg' %}">
+        <img src="{% static 'eve_holder/../../static/images/block2.jpg' %}" alt="Host Block pic">
     </div>
     <div id="block3">
         <div id="block3-text">
@@ -80,14 +80,12 @@
                 Are you ready to discover a new thing?
             </div>
         </div>
-        <img src="{% static 'eve_holder/../../static/images/lastblock.jpg' %}">
+        <img src="{% static 'eve_holder/../../static/images/lastblock.jpg' %}" alt="Visitors block pic">
     </div>
 
 </div>
 
 </body>
-
-
 
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -100,7 +98,7 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-  <script>
+<script>
     AOS.init();
-  </script>
+</script>
 </html>
