--- a/templates/eve_holder/host.html
+++ b/templates/eve_holder/host.html
@@ -4,7 +4,7 @@
 
     <br>
 
-    {%include 'eve_holder/messages.html'%}
+    {% include 'eve_holder/messages.html' %}
 
     <br>
 
@@ -13,8 +13,10 @@
             <div class="card card-body" style="min-height: 275px">
                 <h5>Host: {{ host.name }}</h5>
                 <hr>
-                <a class="btn btn-outline-info  btn-sm btn-block" href="{% url 'eve_holder:host_update_information' %}">Update Account</a>
-                <a class="btn btn-outline-danger  btn-sm btn-block" href="{% url 'eve_holder:delete_account' %}">Delete Account</a>
+                <a class="btn btn-outline-info  btn-sm btn-block" href="{% url 'eve_holder:host_update_information' %}">Update
+                    Account</a>
+                <a class="btn btn-outline-danger  btn-sm btn-block" href="{% url 'eve_holder:delete_account' %}">Delete
+                    Account</a>
 
             </div>
         </div>
